// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo should render the default sign logo when no props is declared 1`] = `
<div>
  <div
    class="css-1mcyu8t"
    data-testid="logo"
  >
    <svg
      preserveAspectRatio="xMidYMid slice"
    >
      sign.svg
    </svg>
  </div>
</div>
`;

exports[`Logo should render the group-dark logo 1`] = `
<div>
  <div
    class="css-1mcyu8t"
    data-testid="logo"
  >
    <svg
      preserveAspectRatio="xMidYMid slice"
    >
      group-logo-dark-mode.svg
    </svg>
  </div>
</div>
`;

exports[`Logo should render the group-light logo 1`] = `
<div>
  <div
    class="css-1mcyu8t"
    data-testid="logo"
  >
    <svg
      preserveAspectRatio="xMidYMid slice"
    >
      group-logo-light-mode.svg
    </svg>
  </div>
</div>
`;
